--- a/index.html
+++ b/index.html
@@ -418,7 +418,61 @@
      </main>
     <!-- Footer -->
      <footer>
-      
+      <!-- Container -->
+      <div class="container">
+         <!-- About -->
+         <div class="about">
+            <p><img src="./assets/img/footer/Logo.svg" alt="logo"></p>
+            <div class="txt">
+               <p>268 St, South New York/NY 98944, United States
+               <p>+222-1800-2628</p>
+               <p>blueskytechcompany@gmail.com</p>
+            </div>
+            <p><img src="./assets/img/footer/social.svg" alt="social"></p>
+            <p><img src="./assets/img/footer/followOnShop.svg" alt="followOnShop"></p>
+         </div>
+         <!-- Hot Categories -->
+         <div class="hot-categories">
+            <h1>HOT CATEGORIES</h1>
+            <nav>
+               <ul>
+                  <li>Special Offers</li>
+                  <li>Performance</li>
+                  <li>T-shirts</li>
+                  <li>Underwear</li>
+                  <li>Top Brands</li>
+                  <li>Online Exclusive</li>
+               </ul>
+            </nav>
+         </div>
+         <!-- Service -->
+         <div class="service">
+            <h1>CUSTOMER SERVICE</h1>
+            <nav>
+               <ul>
+                  <li>Privacy Policy</li>
+                  <li>Refund Policy</li>
+                  <li>Shipping & Return</li>
+                  <li>Term & Conditions</li>
+                  <li>Advanced Search</li>
+                  <li>Theme FAQs</li>
+                  <li>Store Locations</li>
+               </ul>
+            </nav>
+         </div>
+         <!-- Newsletter -->
+         <div class="newsletter">
+            <h1>SIGN UP TO NEWSLETTER</h1>
+            <p>Enter your email address to get $10 off your first order and</p>
+            <p>free hipping. Updates information on Sales and Offers.</p>
+            <div class="subscribe">
+               <input type="text" id="subscribe" placeholder="Enter your email...">
+               <button>SUBSCRIBE</button>
+            </div>
+         </div>
+      </div>
+      <!-- Copyright -->
+       <div class="copyright">q</div>
      </footer>
 </body>
 </html>
