--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <!-- Footer -->
      <footer>
       <!-- Container -->
-      <div class="container">
+       <div class="container">
          <!-- About -->
          <div class="about">
             <p><img src="./assets/img/footer/Logo.svg" alt="logo"></p>
@@ -470,9 +470,24 @@
                <button>SUBSCRIBE</button>
             </div>
          </div>
-      </div>
+       </div>
       <!-- Copyright -->
-       <div class="copyright">q</div>
+       <div class="copyright">
+         <nav>
+            <ul>
+               <li>
+                  <a href="#!">English</a>
+                  <img src="./assets/img/footer/.svg" alt="." width="12px" height="10px">
+               </li>
+               <li>
+                  <a href="#!">United States (USD-$)</a>
+                  <img src="./assets/img/footer/.svg" alt="." width="12px" height="10px">
+               </li>
+            </ul>
+         </nav>
+         <p>© 2023 Umino Store. All Rights Reserved.</p>
+         <img src="./assets/img/footer/payment.svg" alt="payment">
+       </div>
      </footer>
 </body>
 </html>
