--- a/index.html
+++ b/index.html
@@ -20,19 +20,11 @@
          <div class="notification">
             <!-- topbar -->
              <div class="topbar">
-                <ul>
-                    <li>
-                        <p>Black Friday 50% Off! Limited time only:</p>
-                    </li>
-                    <li>
-                        <p>652 days : 05 hour : 09 mins : 52 secs</p>
-                    </li>
-                </ul>
+               <p>Black Friday 50% Off! Limited time only:</p>
+               <p>652 days : 05 hour : 09 mins : 52 secs</p>
              </div>
             <!-- button -->
-             <div class="action">
-                <a href="#!" class="btn-X">X</a>
-             </div>
+             <a href="#!" class="action">X</a>
          </div>
         <!-- top links -->
          <div class="top-links">
@@ -47,68 +39,105 @@
                 <a href="#!">Sign Up</a>
              </div>
             <!-- Language -->
-            <nav>
+            <div class="language">
                <ul>
                   <li>
                      <a href="#!">Our Stores</a>
                   </li>
                   <li>
                      <a href="#!">English</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                     <img src="./assets/img/header/.svg" alt="." width="12px" height="10px">
                   </li>
                   <li>
                      <a href="#!">United States (USD-$)</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
+                     <img src="./assets/img/header/.svg" alt="." width="12px" height="10px">
                   </li>
                </ul>
-            </nav>
+            </div>
          </div>
         <!-- Background -->
-         <div class="background">
+         <nav>
             <!-- Logo -->
-             <div class="logo">
-                <img src="./assets/img/Logo.svg" alt="Logo">
-             </div>
+            <a href="#!" class="logo">
+               <img src="./assets/img/header/Logo.svg" alt="Logo">
+            </a>
             <!-- Menu -->
-             <nav>
-               <ul>
-                  <li>
-                     <a href="#!">Home</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
-                  </li>
-                  <li>
-                     <a href="#!">Shop</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
-                  </li>
-                  <li>
-                     <a href="#!">Products</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
-                  </li>
-                  <li>
-                     <a href="#!">Pages</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
-                  </li>
-                  <li>
-                     <a href="#!">Blog</a>
-                     <img src="./assets/img/.svg" alt="." width="12px" height="10px">
-                  </li>
-                  <li>
-                     <a href="#!">Sale</a>
-                  </li>
-                  <li>
-                     <a href="#!">Buy Umino!</a>
-                  </li>
-               </ul>
-             </nav>
+            <ul class="menu">
+               <li>
+                  <a href="#!">Home</a>
+                  <!-- List Home -->
+                  <ul class="list-home">
+                     <li>
+                        <a href="#!">Main demo</a>
+                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                     </li>
+                     <li>
+                        <a href="#!">Skincare</a>
+                     </li>
+                     <li>
+                        <a href="#!">Simple Modern</a>
+                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                     </li>
+                     <li>
+                        <a href="#!">Simple Fashion</a>
+                        <img src="./assets/img/header/shop/tiktok.svg" alt="tiktok" width="52px" height="21px">
+                     </li>
+                     <li>
+                        <a href="#!">Trendy Style</a>
+                     </li>
+                     <li>
+                        <a href="#!">Minimal Clothings</a>
+                     </li>
+                     <li>
+                        <a href="#!">Men's Luxury</a>
+                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                     </li>
+                     <li>
+                        <a href="#!">Clothing Store</a>
+                     </li>
+                     <li>
+                        <a href="#!">Categories Men’s</a>
+                     </li>
+                     <li>
+                        <a href="#!">Unique Watches</a>
+                     </li>
+                     <li>
+                        <a href="#!">Underwear</a>
+                        <img src="./assets/img/header/shop/new.svg" alt="new" width="42px" height="21px">
+                     </li>
+                     <li>
+                        <a href="#!">RTL Demo</a>
+                     </li>
+                  </ul>
+               </li>
+               <li>
+                  <a href="#!">Shop</a>
+               </li>
+               <li>
+                  <a href="#!">Products</a>
+               </li>
+               <li>
+                  <a href="#!">Pages</a>
+               </li>
+               <li>
+                  <a href="#!">Blog</a>
+               </li>
+               <li>
+                  <a href="#!">Sale</a>
+               </li>
+               <li>
+                  <a href="#!">Buy Umino!</a>
+               </li>
+            </ul>
             <!-- Icon -->
-             <div class="icon">
-                <img src="./assets/img/Search.svg" alt="Search">
-                <img src="./assets/img/Login.svg" alt="Login">
-                <img src="./assets/img/Recently viewed.svg" alt="Recently viewed">
-                <img src="./assets/img/Wishlist.svg" alt="Wishlist">
-                <img src="./assets/img/Cart.svg" alt="Cart">
-             </div>
-         </div>
+            <div class="icon">
+               <img src="./assets/img/header/Search.svg" alt="Search">
+               <img src="./assets/img/header/Login.svg" alt="Login">
+               <img src="./assets/img/header/Recently viewed.svg" alt="Recently viewed">
+               <img src="./assets/img/header/Wishlist.svg" alt="Wishlist">
+               <img src="./assets/img/header/Cart.svg" alt="Cart">
+            </div>
+         </nav>
      </header>
     <!-- Main -->
      <main>
@@ -117,24 +146,24 @@
             <!-- Img -->
              <div class="img">
                <img src="./assets/img/main/slider/img1.jpg" alt="img1" width="1920px" height="650px">
-             </div>
-            <!-- Text -->
-             <div class="text">
-               <h1>Stylish</h1>
-               <h1>Top Trending</h1>
-               <p>So soft you don't want to take it off.</p>
-               <a href="#!" class="bnt-en">Explore Now</a>
-             </div>
-            <!-- Hover Button -->
-             <div class="hover-button">
-               <a href="#!" class="btn-l">❮</a>
-               <a href="#!" class="btn-r">❯</a>
-             </div>
-            <!-- Dots -->
-             <div class="dot">
-               <button onclick="curentSlide(1)"></button>
-               <button onclick="curentSlide(2)"></button>
-               <button onclick="curentSlide(3)"></button>
+               <!-- Text -->
+               <div class="text">
+                  <h1>Stylish</h1>
+                  <h1>Top Trending</h1>
+                  <p>So soft you don't want to take it off.</p>
+                  <a href="#!" class="bnt-en">Explore Now</a>
+               </div>
+               <!-- Hover Button -->
+               <div class="hover-button">
+                  <a href="#!" class="btn-l">❮</a>
+                  <a href="#!" class="btn-r">❯</a>
+               </div>
+               <!-- Dots -->
+               <div class="dot">
+                  <button onclick="curentSlide(1)"></button>
+                  <button onclick="curentSlide(2)"></button>
+                  <button onclick="curentSlide(3)"></button>
+               </div>
              </div>
           </div>
          <!-- Feature Categories -->
@@ -178,7 +207,7 @@
                <h1>Trending this Week</h1>
              </div>
             <!-- Text -->
-             <nav>
+             <div class="txt">
                <ul>
                   <li>
                      <a href="#!">TOPS</a>
@@ -196,7 +225,7 @@
                      <a href="#!">SHOES</a>
                   </li>
                </ul>
-             </nav>
+             </div>
             <!-- Products -->
              <div class="products">
                <!-- 1 -->
@@ -204,9 +233,9 @@
                   <img src="./assets/img/main/trending/pro1.svg" alt="pro1" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/trending/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate1.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 2 -->
@@ -214,9 +243,9 @@
                   <img src="./assets/img/main/trending/pro2.svg" alt="pro2" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/trending/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate2.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 3 -->
@@ -224,9 +253,9 @@
                   <img src="./assets/img/main/trending/pro3.svg" alt="pro3" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/trending/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate1.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 4 -->
@@ -234,9 +263,9 @@
                   <img src="./assets/img/main/trending/pro4.svg" alt="pro4" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/trending/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/trending/rate2.svg" alt="rate" width="54px" height="10px">
                      <p>$145.00 - $169.00</p>
-                     <img src="./assets/img/main/trending/color.svg" alt="color">
+                     <img src="./assets/img/main/trending/color.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
              </div>
@@ -245,7 +274,7 @@
           <div class="banner">
             <!-- Banner1 -->
              <div class="bn1">
-               <img src="./assets/img/main/banner/banner1.svg" alt="bn1" width="500px" height="700px">
+               <img src="./assets/img/main/banner/banner1.svg" alt="bn1" width="600px" height="800px">
                <div class="text">
                   <p>ONLINE EXCLUSIVE</p>
                   <h1>Oversized Shirt</h1>
@@ -254,7 +283,7 @@
              </div>
             <!-- Banner2 -->
              <div class="bn2">
-               <img src="./assets/img/main/banner/banner2.svg" alt="bn2" width="500px" height="700px">
+               <img src="./assets/img/main/banner/banner2.svg" alt="bn2" width="600px" height="800px">
                <div class="text">
                   <p>ONLINE EXCLUSIVE</p>
                   <h1>Oversized Shirt</h1>
@@ -263,7 +292,7 @@
              </div>
             <!-- Banner3 -->
              <div class="bn3">
-               <img src="./assets/img/main/banner/banner3.svg" alt="bn3" width="500px" height="700px">
+               <img src="./assets/img/main/banner/banner3.svg" alt="bn3" width="600px" height="800px">
                <div class="text">
                   <p>ONLINE EXCLUSIVE</p>
                   <h1>Oversized Shirt</h1>
@@ -285,9 +314,9 @@
                   <img src="./assets/img/main/arrivals/pro1.svg" alt="pro1" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/arrivals/color1.svg" alt="color">
+                     <img src="./assets/img/main/arrivals/color1.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 2 -->
@@ -295,9 +324,9 @@
                   <img src="./assets/img/main/arrivals/pro2.svg" alt="pro2" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/arrivals/color2.svg" alt="color">
+                     <img src="./assets/img/main/arrivals/color2.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 3 -->
@@ -305,9 +334,9 @@
                   <img src="./assets/img/main/arrivals/pro3.svg" alt="pro3" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate">
+                     <img src="./assets/img/main/arrivals/rate1.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/arrivals/color3.svg" alt="color">
+                     <img src="./assets/img/main/arrivals/color3.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
                <!-- 4 -->
@@ -315,9 +344,9 @@
                   <img src="./assets/img/main/arrivals/pro4.svg" alt="pro4" width="330px" height="440px">
                   <div class="text">
                      <h1>Square Textured Striped</h1>
-                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate">
+                     <img src="./assets/img/main/arrivals/rate2.svg" alt="rate" width="54px" height="10px">
                      <p>$150.00</p>
-                     <img src="./assets/img/main/arrivals/color3.svg" alt="color">
+                     <img src="./assets/img/main/arrivals/color3.svg" alt="color" width="85px" height="25px">
                   </div>
                </div>
              </div>
@@ -332,7 +361,7 @@
             <!-- Text -->
              <div class="text">
                <!-- About Text -->
-                <div class="at">
+                <div class="txt">
                   <!-- 1 -->
                   <div>
                      <img src="./assets/img/main/people/img1.svg" alt="people1">
@@ -341,7 +370,7 @@
                      <p>Algistino Lionel - Verified Buyer</p>
                   </div>
                   <!-- 2 -->
-                  <div class="txt">
+                  <div>
                      <img src="./assets/img/main/people/img2.svg" alt="people2">
                      <p>Great to be able to order everything I needed from the comfort of my home and the delivery was extremely quick. Recommend... 🥰</p>
                      <img src="./assets/img/main/people/rate.svg" alt="rate">
@@ -434,31 +463,27 @@
          <!-- Hot Categories -->
          <div class="hot-categories">
             <h1>HOT CATEGORIES</h1>
-            <nav>
-               <ul>
-                  <li>Special Offers</li>
-                  <li>Performance</li>
-                  <li>T-shirts</li>
-                  <li>Underwear</li>
-                  <li>Top Brands</li>
-                  <li>Online Exclusive</li>
-               </ul>
-            </nav>
+            <ul>
+               <li>Special Offers</li>
+               <li>Performance</li>
+               <li>T-shirts</li>
+               <li>Underwear</li>
+               <li>Top Brands</li>
+               <li>Online Exclusive</li>
+            </ul>
          </div>
          <!-- Service -->
          <div class="service">
             <h1>CUSTOMER SERVICE</h1>
-            <nav>
-               <ul>
-                  <li>Privacy Policy</li>
-                  <li>Refund Policy</li>
-                  <li>Shipping & Return</li>
-                  <li>Term & Conditions</li>
-                  <li>Advanced Search</li>
-                  <li>Theme FAQs</li>
-                  <li>Store Locations</li>
-               </ul>
-            </nav>
+            <ul>
+               <li>Privacy Policy</li>
+               <li>Refund Policy</li>
+               <li>Shipping & Return</li>
+               <li>Term & Conditions</li>
+               <li>Advanced Search</li>
+               <li>Theme FAQs</li>
+               <li>Store Locations</li>
+            </ul>
          </div>
          <!-- Newsletter -->
          <div class="newsletter">
@@ -473,7 +498,7 @@
        </div>
       <!-- Copyright -->
        <div class="copyright">
-         <nav>
+         <div>
             <ul>
                <li>
                   <a href="#!">English</a>
@@ -484,7 +509,7 @@
                   <img src="./assets/img/footer/.svg" alt="." width="12px" height="10px">
                </li>
             </ul>
-         </nav>
+         </div>
          <p>© 2023 Umino Store. All Rights Reserved.</p>
          <img src="./assets/img/footer/payment.svg" alt="payment">
        </div>
