--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
                   <ul class="list-home">
                      <li>
                         <a href="#!">Main demo</a>
-                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                        <img src="./assets/img/header/menu/menu-home-hot.svg" alt="hot" width="39px" height="21px">
                      </li>
                      <li>
                         <a href="#!">Skincare</a>
                      </li>
                      <li>
                         <a href="#!">Simple Modern</a>
-                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                        <img src="./assets/img/header/menu/menu-home-hot.svg" alt="hot" width="39px" height="21px">
                      </li>
                      <li>
                         <a href="#!">Simple Fashion</a>
-                        <img src="./assets/img/header/shop/tiktok.svg" alt="tiktok" width="52px" height="21px">
+                        <img src="./assets/img/header/menu/menu-home-tiktok.svg" alt="tiktok" width="52px" height="21px">
                      </li>
                      <li>
                         <a href="#!">Trendy Style</a>
@@ -90,7 +90,7 @@
                      </li>
                      <li>
                         <a href="#!">Men's Luxury</a>
-                        <img src="./assets/img/header/shop/hot.svg" alt="hot" width="39px" height="21px">
+                        <img src="./assets/img/header/menu/menu-home-hot.svg" alt="hot" width="39px" height="21px">
                      </li>
                      <li>
                         <a href="#!">Clothing Store</a>
@@ -103,7 +103,7 @@
                      </li>
                      <li>
                         <a href="#!">Underwear</a>
-                        <img src="./assets/img/header/shop/new.svg" alt="new" width="42px" height="21px">
+                        <img src="./assets/img/header/menu/menu-home-new.svg" alt="new" width="42px" height="21px">
                      </li>
                      <li>
                         <a href="#!">RTL Demo</a>
@@ -112,6 +112,76 @@
                </li>
                <li>
                   <a href="#!">Shop</a>
+                  <!-- List Shop -->
+                  <div class="ctn-list-shop">
+                     <div class="list-shop">
+                        <!-- Layout -->
+                        <div class="layouts">
+                           <p>Shop Layouts</p>
+                           <ul>
+                              <li>
+                                 <a href="#!">Filter Left Sidebar</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Filter Right Sidebar</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Filter Dropdown</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Canvas Sidebar</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Full Width</a>
+                              </li>
+                              <li>
+                                 <a href="#!">List View</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Grid 2 Columns</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Grid 3 Columns</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Grid 4 Columns</a>
+                              </li>
+                           </ul>
+                        </div>
+                        <!-- Page -->
+                        <div class="page">
+                           <p>Shop Pages</p>
+                           <ul>
+                              <li>
+                                 <a href="#!">Collection List v1</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Collection List v2</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Load More Button</a>                          
+                              </li>
+                              <li>
+                                 <a href="#!">Infinite Scrolling</a>
+                              </li>
+                              <li>
+                                 <a href="#!">Panigation Page</a>                         
+                              </li>
+                           </ul>
+                        </div>
+                        <!-- Collection -->
+                        <div class="collection">
+                           <div class="clt1">
+                              <img src="./assets/img/header/menu/menu-shop-1.svg" alt="menu-shop-1" width="268px" height="330px">
+                              <a href="#!">Blazers</a>
+                           </div>
+                           <div class="clt2">
+                              <img src="./assets/img/header/menu/menu-shop-2.svg" alt="menu-shop-2" width="268px" height="330px">
+                              <a href="#!">Handbag</a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>   
                </li>
                <li>
                   <a href="#!">Products</a>
