--- a/index.html
+++ b/index.html
@@ -205,7 +205,12 @@
                <img src="./assets/img/header/Login.svg" alt="Login">
                <img src="./assets/img/header/Recently viewed.svg" alt="Recently viewed">
                <img src="./assets/img/header/Wishlist.svg" alt="Wishlist">
-               <img src="./assets/img/header/Cart.svg" alt="Cart">
+               <a href="#!" class="cart">
+                  <img src="./assets/img/header/Cart.svg" alt="Cart">
+                  <div class="minicart">
+                     <img src="./assets/img/header/icon/minicart.svg" alt="mini cart"  style="width: 450px; height: 960px;">
+                  </div>
+               </a>
             </div>
          </nav>
      </header>
@@ -215,7 +220,7 @@
           <div class="slider">
             <!-- Img -->
              <div class="img">
-               <img src="./assets/img/main/slider/img1.jpg" alt="img1" width="1920px" height="650px">
+               <img src="./assets/img/main/slider/img1.jpg" alt="img1" width="1920px" height="810px">
                <!-- Text -->
                <div class="text">
                   <h1>Stylish</h1>
