--- a/index.html
+++ b/index.html
@@ -205,9 +205,35 @@
                <img src="./assets/img/header/Login.svg" alt="Login">
                <img src="./assets/img/header/Recently viewed.svg" alt="Recently viewed">
                <img src="./assets/img/header/Wishlist.svg" alt="Wishlist">
-               <a href="#!" class="cart">
+               <div class="cart">
                   <img src="./assets/img/header/Cart.svg" alt="Cart">
-               </a>
+                  <div class="minicart">
+                     <div class="title">
+                        <h1>Shopping Cart</h1>
+                        <button class="close">X</button>
+                     </div>
+                     <div style="background-color: white; height: 650px;">
+                        .
+                     </div>
+                     <div class="ic">
+                        <img src="./assets/img/header/icon/cart/note.svg" alt="note">
+                        <img src="./assets/img/header/icon/cart/gift.svg" alt="gift">
+                        <img src="./assets/img/header/icon/cart/shipping.svg" alt="shipping">
+                     </div>
+                     <div class="subtotal">
+                        <h1>Subtotal:</h1>
+                     </div>
+                     <div class="tick">
+                        <input type="checkbox">
+                        <p>I agree with the</p>
+                        <a href="#!">terms and conditions</a>
+                     </div>
+                     <div class="button">
+                        <button class="viewcart">View Cart</button>
+                        <button class="checkout">Checkout</button>
+                     </div>
+                  </div>
+               </div>
             </div>
          </nav>
      </header>
