--- a/index.html
+++ b/index.html
@@ -163,33 +163,51 @@
 
    <!-- Main -->
    <main>
+        <!-- Slider -->
         <div class="slider-wrapper relative overflow-hidden">
             <div class="slider d-flex">
+                <!-- 1 -->
                 <div class="slide relative">
                     <a href="">
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-1.jpg" alt="Slide 1">
                     </a>
-                    <!-- <div class="absolute">
-                        <h1 class="">Stylish<br>Top Trending</h1>
-                        <p class="">So soft you don't want to take it off.</p>
-                        <button class="">EXPLORE NOW</button>
-                    </div> -->
+                    <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-252 left-xxl-352">
+                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Stylish<br>Top Trending</h1>
+                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="btn btn-black rounded-circle-35 fs-12 fw-600 lh px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                    </div>
                 </div>
-                <div class="slide">
+
+                <!-- 2 -->
+                <div class="slide relative">
                     <a href="">
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-2.jpg" alt="Slide 2">
                     </a>
+                    <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-252 left-xxl-352">
+                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Hulton<br>Perfect Simple</h1>
+                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="btn btn-black rounded-circle-35 fs-12 fw-600 lh px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                    </div>
                 </div>
-                <div class="slide">
+
+                <!-- 3 -->
+                <div class="slide relative">
                     <a href="">
                         <img class="img-slide" src="assets/img/main/slider/slider-pc-3.jpg" alt="Slide 3">
                     </a>
+                    <div class="absolute top-175 left-21 top-md-225 left-md-130 text-md-center top-lg-300 left-lg-220 top-xxl-252 left-xxl-352">
+                        <h1 class="fs-40 fw-400 lh-45 mb-14 fs-xl-80 lh-xl-80 mb-xl-24">Online<br>Limited Edition</h1>
+                        <p class="fs-16 fw-400 lh color-gray-dark mb-34 mb-xl-53">So soft you don't want to take it off.</p>
+                        <button class="btn btn-black rounded-circle-35 fs-12 fw-600 lh px-44 py-18 px-xl-54 py-xl-21">EXPLORE NOW</button>
+                    </div>
                 </div>
             </div>
 
+            <!-- Btn-prev/next -->
             <div class="slider-prev d-none d-lg-block cursor-pointer bg-white color-black px-26 py-23 fs-14 fw-400 lh absolute left-30">&#10094;</div>
             <div class="slider-next d-none d-lg-block cursor-pointer bg-white color-black px-26 py-23 fs-14 fw-400 lh absolute right-30">&#10095;</div>
         
+            <!-- Dots -->
             <div class="slider-dots cursor-pointer absolute bottom-23"></div>
         </div>
    </main>
